--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,6 @@ REQUIREDIAGNOSIS=0 #if you want the instance to ask for reason for encounter dur
 ENABLE_TWAKTO=0 #if you wan to enable the rwak to support btn
 
 
+SESSION_LIFETIME=2440
+
+
